service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  annotations:
    metallb.universe.tf/address-pool: production-public-ips
spec:
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 32061
  type: LoadBalancer
  selector:
    app: website
